--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
        <div id="video-content"></div>
        <em
          ><a
-           href="https://github.com/michouclaudine-code/weather-app"
+           href="https://github.com/maribns1994/project/edit/main/index.html"
            id="github"
            ><b>Open-sourced on Github</b></a
          >
